# emmet

./: .gitignore  LICENSE  Makefile  README.md  devenv-uv2nix.nix  devenv.nix  devenv.yaml  overrides.nix  pyproject.toml
src/emmet/: cli.py  constants.py  rules.py  types.py  utils.py
src/emmet/commands/: __init__.py  dump_excel.py  send_verification.py  set_all_emails_verified.py  set_email_verified.py  sync.py  verify_token.py
src/emmet/utils/: __init__.py  excel_parsing.py  name_parsing.py
src/emmet/utils/column_detection/: __init__.py  date_detection.py  email_detection.py  generic_detection.py  header_detection.py  name_detection.py
